--- a/GAP-FrontEnd/package.json
+++ b/GAP-FrontEnd/package.json
@@ -42,6 +42,7 @@
     "@types/datatables.net-buttons": "^2.2.3",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.32",
+    "@types/xlsx": "^0.0.36",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
