--- a/GAP-BAckEnd/src/main/resources/application-dev.properties
+++ b/GAP-BAckEnd/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 server.port=8083
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=pointage;encrypt=true;trustServerCertificate=true;
-spring.datasource.username=a.yahya
+spring.datasource.username=UserAppRB
 spring.datasource.password=Richebois@1977
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 server.servlet.context-path=/GAP-DEV
