--- a/GAP-BAckEnd/src/main/resources/application-dev.properties
+++ b/GAP-BAckEnd/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 server.port=8083
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=pointage;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=UserAppRB
 spring.datasource.password=Richebois@1977
